--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,15 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    
     "@workspace/ui": "workspace:*",
+    "framer-motion": "^11.15.0",
     "lucide-react": "0.456.0",
-    "next-themes": "^0.4.3",
     "next": "^15.1.0",
+    "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
     "@workspace/eslint-config": "workspace:^",
