--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "prettier": "^3.2.5",
+    "prisma": "^6.1.0",
     "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.1.0",
+    "tsc-watch": "^6.2.1"
   }
 }
